Fixed header on small screen sizes

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -84,7 +84,7 @@
   main#home > h1 {
     margin-top: 10vh;
     margin-top: 10dvh;
-    font-size: 19vw;
+    font-size: 17vw;
   }
 
   .projects {
